--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,7 @@ subjects:
 - !lcc 'D'
 - !lcsh 'Europe -- History -- 18th century -- Biography'
 - !lcsh 'Casanova, Giacomo, 1725-1798'
+- GITenberg
 title: "The Memoirs of Jacques Casanova de Seingalt, Vol. III (of VI), \"The Eternal\
   \ Quest\"\r\nThe First Complete and Unabridged English Translation, Illustrated\
   \ with Old Engravings"
